[gd_scene load_steps=12 format=3 uid="uid://h5eqykjww24s"]

[ext_resource type="PackedScene" uid="uid://voggtj33mvkj" path="res://assets/models/mech/Mech.glb" id="1_4my1m"]
[ext_resource type="Script" uid="uid://ct2qmc571x761" path="res://game/entities/mech.gd" id="1_wa243"]
[ext_resource type="AudioStream" uid="uid://delgh1ktdppjo" path="res://assets/sounds/sfx/game/metal_punch_06.wav" id="3_1osns"]
[ext_resource type="AudioStream" uid="uid://dts83m1p2e3w7" path="res://assets/sounds/sfx/game/512815__mostyxs__good-jetpack-sound-loop.wav" id="4_d1bah"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vn6h1"]
animation = &"Stand"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4my1m"]
animation = &"RunForward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wa243"]
animation = &"RunRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q0gqj"]
animation = &"RunLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xhcjw"]
animation = &"RunBackward"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_l3c2a"]
blend_point_0/node = SubResource("AnimationNodeAnimation_vn6h1")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_4my1m")
blend_point_1/pos = Vector2(0, 6)
blend_point_2/node = SubResource("AnimationNodeAnimation_wa243")
blend_point_2/pos = Vector2(6, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_q0gqj")
blend_point_3/pos = Vector2(-6, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_xhcjw")
blend_point_4/pos = Vector2(0, -6)
min_space = Vector2(-6, -6)
max_space = Vector2(6, 6)
snap = Vector2(1, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yp3ga"]
height = 2.8
radius = 0.771

[node name="Mech" type="CharacterBody3D"]
collision_layer = 0
script = ExtResource("1_wa243")

[node name="Mech" parent="." instance=ExtResource("1_4my1m")]

[node name="Skeleton3D" parent="Mech/Armature" index="0"]
bones/1/rotation = Quaternion(3.09086e-08, 0.707107, 0.707107, 3.09086e-08)
bones/2/position = Vector3(0, 1.48402, 0)
bones/3/rotation = Quaternion(-1.15406e-08, 0.471057, 0.882103, -3.71675e-08)
bones/3/scale = Vector3(1, 1, 0.999988)
bones/4/rotation = Quaternion(-0.50532, -1.30299e-07, -2.95319e-13, 0.862932)
bones/5/rotation = Quaternion(4.93908e-08, 0.817028, 0.576598, -1.17861e-07)
bones/6/rotation = Quaternion(4.12504e-08, 0.0670051, 0.997753, 1.9554e-08)
bones/6/scale = Vector3(1, 0.999999, 0.99999)
bones/7/rotation = Quaternion(-0.491252, 1.31519e-07, 2.8777e-13, 0.871017)
bones/8/rotation = Quaternion(-7.7857e-08, 0.558003, 0.829839, 7.46804e-08)
bones/15/position = Vector3(0.54, 0.298351, 0.517688)
bones/15/rotation = Quaternion(0.839034, 7.84941e-18, 4.8512e-18, 0.544079)
bones/16/rotation = Quaternion(3.09086e-08, 0.707107, 0.707107, 3.09086e-08)
bones/17/position = Vector3(-0.54, 0.292592, -0.52936)
bones/17/rotation = Quaternion(0.861614, -4.00751e-18, -2.47677e-18, 0.507565)

[node name="Cabin_2" parent="Mech/Armature/Skeleton3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.84223, -0.0265455)

[node name="ArmL" type="Node3D" parent="Mech/Armature/Skeleton3D/Cabin_2/Cabin_2" index="0"]
unique_name_in_owner = true
transform = Transform3D(0.999848, 0, -0.0174524, 0, 1, 0, 0.0174524, 0, 0.999848, 0.548721, 0.33171, 0.0265455)

[node name="ArmR" type="Node3D" parent="Mech/Armature/Skeleton3D/Cabin_2/Cabin_2" index="1"]
unique_name_in_owner = true
transform = Transform3D(-0.999848, 1.52574e-09, 0.0174524, 0, 1, -8.74228e-08, 0.0174524, 8.74095e-08, 0.999848, -0.554226, 0.331795, 0.0265455)

[node name="ShoulderL" type="Node3D" parent="Mech/Armature/Skeleton3D/Cabin_2/Cabin_2" index="2"]
unique_name_in_owner = true
transform = Transform3D(0.999848, -0.000304586, -0.0174497, 0, 0.999848, -0.0174524, 0.0174524, 0.0174497, 0.999695, 0.554226, 0.972179, -0.179642)

[node name="ShoulderR" type="Node3D" parent="Mech/Armature/Skeleton3D/Cabin_2/Cabin_2" index="3"]
unique_name_in_owner = true
transform = Transform3D(-0.999848, 0.000304586, 0.0174497, 0, 0.999848, -0.0174524, 0.0174524, 0.0174497, 0.999695, -0.554226, 0.972286, -0.179642)

[node name="PivotChecker" type="Node3D" parent="Mech/Armature/Skeleton3D/Cabin_2/Cabin_2" index="4"]
unique_name_in_owner = true

[node name="StepAudio" type="AudioStreamPlayer3D" parent="Mech"]
unique_name_in_owner = true
stream = ExtResource("3_1osns")
volume_db = -35.0
bus = &"StepsBus"

[node name="JumpAudio" type="AudioStreamPlayer3D" parent="Mech"]
unique_name_in_owner = true
stream = ExtResource("4_d1bah")
volume_db = -20.0

[node name="PivotDown" type="Node3D" parent="Mech"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.81531, 0)

[node name="PivotUp" type="Node3D" parent="Mech"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.84797, 0)

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Mech")
root_motion_track = NodePath("Armature/Skeleton3D:Root")
root_motion_local = false
tree_root = SubResource("AnimationNodeBlendSpace2D_l3c2a")
anim_player = NodePath("../Mech/AnimationPlayer")
parameters/blend_position = Vector2(0, 0.527472)

[node name="RootMotionView" type="RootMotionView" parent="AnimationTree"]
animation_path = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.43826, 0)
shape = SubResource("CylinderShape3D_yp3ga")

[editable path="Mech"]
